# tsetlin-mnist-rs

./: .gitignore  Cargo.toml  README.md
src/: benchmark.rs  feedback.rs  main.rs  optimise.rs
