[package]
name = "tsetlin-mnist-rs"
version = "0.1.0"
edition = "2021"

[lints.rust]
unused = "warn"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
# panic = "abort"

[dependencies]
itertools = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sys-info = "0.9.1"
wyhash = "0.5.0"
# rayon = "1.10.0"
